[gd_scene load_steps=33 format=3 uid="uid://ct5fhll0q7cny"]

[ext_resource type="Texture2D" uid="uid://bjly2qej7fsgg" path="res://Final_Graphics/level_3_graphics/lvl3_background.png" id="1_02bvr"]
[ext_resource type="Texture2D" uid="uid://mxm2fpiiw5xw" path="res://Final_Graphics/level_3_graphics/TextBox.png" id="2_46jcg"]
[ext_resource type="Texture2D" uid="uid://ctooedskgnjgh" path="res://Final_Graphics/level_1_graphics/conveyer_belt.png" id="2_r6nnp"]
[ext_resource type="FontFile" uid="uid://cb2utp6qgc8a2" path="res://Fonts/ari-w9500.ttf" id="3_ex5s6"]
[ext_resource type="Texture2D" uid="uid://g4o0air7ayji" path="res://Final_Graphics/level_1_graphics/wood_platform.png" id="3_r6nnp"]
[ext_resource type="Script" uid="uid://dli32547ydnhe" path="res://Scripts/emotyItemsBox.gd" id="4_4t04n"]
[ext_resource type="Texture2D" uid="uid://c02bdugwiodun" path="res://Final_Graphics/level_3_graphics/metal_detector_LAYERS/metal_detector_body.png" id="4_aig73"]
[ext_resource type="Texture2D" uid="uid://ujx831k3lu3h" path="res://Final_Graphics/level_3_graphics/TextBox2.png" id="4_owrw6"]
[ext_resource type="Texture2D" uid="uid://bnp8ikudhxlso" path="res://Final_Graphics/level_3_graphics/metal_detector_LAYERS/green_light.png" id="5_c0thm"]
[ext_resource type="Script" uid="uid://pwyw0cct40e6" path="res://Scripts/text1.gd" id="5_v1481"]
[ext_resource type="Texture2D" uid="uid://c1d3sjcmt7afi" path="res://Final_Graphics/level_3_graphics/level_3_graphics/yes_box.png" id="5_y58m1"]
[ext_resource type="Script" uid="uid://xecnb4igeate" path="res://Scripts/text3.gd" id="6_5i5cj"]
[ext_resource type="Texture2D" uid="uid://pspnkepyfehs" path="res://Final_Graphics/level_3_graphics/level_3_graphics/no_box.png" id="6_46jcg"]
[ext_resource type="Texture2D" uid="uid://dvgklwsd54gj7" path="res://Final_Graphics/level_3_graphics/metal_detector_LAYERS/red_light.png" id="6_fwchg"]
[ext_resource type="PackedScene" uid="uid://b05gdp546nbfp" path="res://Player/Player.tscn" id="7_4t04n"]
[ext_resource type="Script" uid="uid://bit13ar11mjgt" path="res://Scripts/text_box_4.gd" id="7_b7oya"]
[ext_resource type="Texture2D" uid="uid://wwp4mbyaqtmm" path="res://Final_Graphics/level_3_graphics/level_3_graphics/fafsa_land_sign.png" id="7_c0thm"]
[ext_resource type="Texture2D" uid="uid://crwfywgy8ckdx" path="res://Final_Graphics/level_3_graphics/level_3_graphics/money_bag.png" id="7_ex5s6"]
[ext_resource type="Script" uid="uid://bjlmo8ulj8gku" path="res://Scripts/level_3_code.gd" id="9_fwchg"]
[ext_resource type="AudioStream" uid="uid://cvwy2paga775f" path="res://game-8-bit-on-278083.mp3" id="20_pcetg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aig73"]
size = Vector2(699.212, 244)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y58m1"]
size = Vector2(327.441, 317)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46jcg"]
size = Vector2(640, 202.615)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex5s6"]
size = Vector2(689.394, 185.552)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owrw6"]
size = Vector2(74.2428, 273.214)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwchg"]
size = Vector2(48, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4t04n"]
size = Vector2(33, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0thm"]
size = Vector2(21, 468)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1481"]
size = Vector2(127.5, 292)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5i5cj"]
size = Vector2(234, 367)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7oya"]
size = Vector2(109, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcetg"]
size = Vector2(118.5, 32)

[node name="Level3" type="Node2D"]

[node name="Lvl3Background" type="Sprite2D" parent="."]
position = Vector2(1517, 277)
scale = Vector2(1.1, 1.1425)
texture = ExtResource("1_02bvr")

[node name="ColorRect" type="ColorRect" parent="Lvl3Background"]
z_index = -1
offset_left = -2602.73
offset_top = -1172.87
offset_right = -2562.73
offset_bottom = -1132.87
scale = Vector2(146.404, 57.3018)
color = Color(0.141176, 0.619608, 0.372549, 1)

[node name="ColorRect2" type="ColorRect" parent="Lvl3Background"]
z_index = 1
offset_left = -7263.64
offset_top = -1164.11
offset_right = -7223.64
offset_bottom = -1124.11
scale = Vector2(146.404, 57.3018)
color = Color(0.141176, 0.619608, 0.372549, 1)

[node name="TextBox" type="Sprite2D" parent="."]
position = Vector2(346.5, 313.7)
scale = Vector2(8.8, 9.14)
texture = ExtResource("2_46jcg")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 215.0
offset_top = 251.0
offset_right = 478.0
offset_bottom = 378.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.008
offset_left = 2.0
offset_right = 2.0
offset_bottom = -0.0160065
theme_override_colors/default_color = Color(0.188235, 0.380392, 0.254902, 1)
theme_override_fonts/normal_font = ExtResource("3_ex5s6")
theme_override_font_sizes/normal_font_size = 22
text = "Hi! Please jump on me to empty your pockets! Then head through the metal detector!"
scroll_active = false

[node name="TextBox2" type="Sprite2D" parent="Control"]
position = Vector2(1129, 3)
scale = Vector2(8, 8)
texture = ExtResource("4_owrw6")
script = ExtResource("5_v1481")

[node name="TextBox3" type="Sprite2D" parent="Control"]
position = Vector2(1538, -48)
scale = Vector2(8, 8)
texture = ExtResource("4_owrw6")
script = ExtResource("6_5i5cj")

[node name="TextBox4" type="Sprite2D" parent="Control"]
position = Vector2(1999, -48)
scale = Vector2(8, 8)
texture = ExtResource("4_owrw6")
script = ExtResource("7_b7oya")

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.008
offset_left = 1007.0
offset_top = -56.0
offset_right = 1007.0
offset_bottom = -56.016
theme_override_colors/default_color = Color(0.188235, 0.380392, 0.254902, 1)
theme_override_fonts/normal_font = ExtResource("3_ex5s6")
theme_override_font_sizes/normal_font_size = 22
text = "Are you poor?"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.008
offset_left = 1419.0
offset_top = -106.0
offset_right = 1419.0
offset_bottom = -106.016
theme_override_colors/default_color = Color(0.188235, 0.380392, 0.254902, 1)
theme_override_fonts/normal_font = ExtResource("3_ex5s6")
theme_override_font_sizes/normal_font_size = 22
text = "Are your parents poor?"
scroll_active = false

[node name="RichTextLabel4" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.008
offset_left = 1880.0
offset_top = -103.0
offset_right = 1880.0
offset_bottom = -103.016
theme_override_colors/default_color = Color(0.188235, 0.380392, 0.254902, 1)
theme_override_fonts/normal_font = ExtResource("3_ex5s6")
theme_override_font_sizes/normal_font_size = 22
text = "Are you lying?"
scroll_active = false

[node name="Platforms" type="Node" parent="."]

[node name="WoodPlatform" type="Sprite2D" parent="Platforms"]
position = Vector2(171, 600)
scale = Vector2(0.529167, 0.5)
texture = ExtResource("3_r6nnp")

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms/WoodPlatform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/WoodPlatform/StaticBody2D"]
position = Vector2(-3.05176e-05, 6)
shape = SubResource("RectangleShape2D_aig73")

[node name="WoodPlatform2" type="Sprite2D" parent="Platforms"]
position = Vector2(847, 506)
scale = Vector2(0.730488, -0.57085)
texture = ExtResource("3_r6nnp")

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms/WoodPlatform2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/WoodPlatform2/StaticBody2D"]
position = Vector2(-2.83463, 5)
shape = SubResource("RectangleShape2D_aig73")

[node name="WoodPlatform3" type="Sprite2D" parent="Platforms"]
position = Vector2(1343, 565)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_r6nnp")

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms/WoodPlatform3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/WoodPlatform3/StaticBody2D"]
position = Vector2(-188.72, -31.5)
shape = SubResource("RectangleShape2D_y58m1")

[node name="YesBox" type="Sprite2D" parent="Platforms/WoodPlatform3"]
position = Vector2(-185, -280)
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_y58m1")

[node name="NoBox" type="Sprite2D" parent="Platforms/WoodPlatform3"]
position = Vector2(190, -285)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_46jcg")

[node name="WoodPlatform4" type="Sprite2D" parent="Platforms"]
position = Vector2(1754, 441)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_r6nnp")

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms/WoodPlatform4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/WoodPlatform4/StaticBody2D"]
position = Vector2(-187.5, -29.2858)
scale = Vector2(0.5, 1.54762)
shape = SubResource("RectangleShape2D_46jcg")

[node name="YesBox2" type="Sprite2D" parent="Platforms/WoodPlatform4"]
position = Vector2(-187.5, -277.5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_y58m1")

[node name="NoBox2" type="Sprite2D" parent="Platforms/WoodPlatform4"]
position = Vector2(185, -280)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_46jcg")

[node name="WoodPlatform5" type="Sprite2D" parent="Platforms"]
position = Vector2(2218, 432)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_r6nnp")

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms/WoodPlatform5"]
position = Vector2(185, 0)
scale = Vector2(0.471429, 1.71111)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/WoodPlatform5/StaticBody2D"]
position = Vector2(0, -21.1851)
shape = SubResource("RectangleShape2D_ex5s6")

[node name="StaticBody2D2" type="StaticBody2D" parent="Platforms/WoodPlatform5"]
position = Vector2(-182.5, 0)
scale = Vector2(0.471429, 1.71111)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/WoodPlatform5/StaticBody2D2"]
position = Vector2(-312.879, -65.0162)
shape = SubResource("RectangleShape2D_owrw6")

[node name="YesBox3" type="Sprite2D" parent="Platforms/WoodPlatform5"]
position = Vector2(-185, -282.5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_y58m1")

[node name="NoBox3" type="Sprite2D" parent="Platforms/WoodPlatform5"]
position = Vector2(182.5, -280)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_46jcg")

[node name="WoodPlatform6" type="Sprite2D" parent="Platforms"]
position = Vector2(2795, 330)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_r6nnp")

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms/WoodPlatform6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/WoodPlatform6/StaticBody2D"]
position = Vector2(-2.83463, 5)
shape = SubResource("RectangleShape2D_aig73")

[node name="ConveyerBelt" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(82, 474)
texture = ExtResource("2_r6nnp")

[node name="StaticBody2D" type="StaticBody2D" parent="ConveyerBelt"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConveyerBelt/StaticBody2D"]
position = Vector2(58, -32)
shape = SubResource("RectangleShape2D_fwchg")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="ConveyerBelt"]
script = ExtResource("4_4t04n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConveyerBelt/Area2D"]
position = Vector2(59.5, -81)
shape = SubResource("RectangleShape2D_4t04n")

[node name="MetalDetectorBody" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(668, 350)
texture = ExtResource("4_aig73")

[node name="GreenLight" type="Sprite2D" parent="MetalDetectorBody"]
z_index = 1
texture = ExtResource("5_c0thm")

[node name="RedLight" type="Sprite2D" parent="MetalDetectorBody"]
z_index = 1
texture = ExtResource("6_fwchg")

[node name="MetalDetectorBody" type="Sprite2D" parent="MetalDetectorBody"]
z_index = 6
position = Vector2(45, 0)
texture = ExtResource("4_aig73")
region_enabled = true
region_rect = Rect2(92, 0, 40, 192)

[node name="StaticBody2D" type="StaticBody2D" parent="MetalDetectorBody/MetalDetectorBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MetalDetectorBody/MetalDetectorBody/StaticBody2D"]
position = Vector2(0.5, -140)
shape = SubResource("RectangleShape2D_c0thm")

[node name="FafsaLandSign" type="Sprite2D" parent="MetalDetectorBody"]
position = Vector2(351, 25)
texture = ExtResource("7_c0thm")

[node name="Player" parent="." instance=ExtResource("7_4t04n")]
z_index = 5
position = Vector2(30, 371)
scale = Vector2(0.8, 0.8)

[node name="Level3Code" type="Node" parent="."]
script = ExtResource("9_fwchg")

[node name="MoneyDrop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoneyDrop"]
position = Vector2(2552.75, 249)
shape = SubResource("RectangleShape2D_v1481")

[node name="Sign1 - trigger" type="Area2D" parent="."]
position = Vector2(879, 278)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sign1 - trigger"]
position = Vector2(98, -15.5)
shape = SubResource("RectangleShape2D_5i5cj")

[node name="Sign2 - trigger" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sign2 - trigger"]
position = Vector2(1266.5, 486)
shape = SubResource("RectangleShape2D_b7oya")

[node name="Sign3 - trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sign3 - trigger"]
position = Vector2(1678, 376)
shape = SubResource("RectangleShape2D_pcetg")

[node name="Money" type="Node2D" parent="."]
z_index = 4

[node name="MoneyBag" type="Sprite2D" parent="Money"]
position = Vector2(2653, 240)
texture = ExtResource("7_ex5s6")

[node name="MoneyBag2" type="Sprite2D" parent="Money"]
position = Vector2(2697, 243)
texture = ExtResource("7_ex5s6")

[node name="MoneyBag3" type="Sprite2D" parent="Money"]
position = Vector2(2682, 204)
texture = ExtResource("7_ex5s6")

[node name="spawnpoint" type="Node2D" parent="." groups=["spawpoint"]]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1571, -62)
stream = ExtResource("20_pcetg")
volume_db = -10.0
autoplay = true
parameters/looping = true

[connection signal="body_entered" from="ConveyerBelt/Area2D" to="Level3Code" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="MoneyDrop" to="Level3Code" method="_on_money_drop_body_entered"]
[connection signal="body_entered" from="Sign1 - trigger" to="Control/TextBox2" method="_on_sign_1__trigger_body_entered"]
[connection signal="body_entered" from="Sign2 - trigger" to="Control/TextBox3" method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Sign3 - trigger" to="Control/TextBox4" method="_on_sign_3__trigger_body_entered"]
